--- a/nagios-nrpe/rootfs/etc/nagios/nrpe.cfg
+++ b/nagios-nrpe/rootfs/etc/nagios/nrpe.cfg
@@ -223,27 +223,23 @@ connection_timeout=300
 #command[check_load]=/usr/lib/nagios/plugins/check_load -w $ARG1$ -c $ARG2$
 #command[check_disk]=/usr/lib/nagios/plugins/check_disk -w $ARG1$ -c $ARG2$ -p $ARG3$
 #command[check_procs]=/usr/lib/nagios/plugins/check_procs -w $ARG1$ -c $ARG2$ -s $ARG3$
-
-
-#command[check_users]=/usr/lib/nagios/plugins/check_users -w 5 -c 10
-#command[check_load]=/usr/lib/nagios/plugins/check_load -w 4,3,3 -c 5,4,3
-command[check_load]=/usr/lib/monitoring-plugins/check_load -w 4,3,3 -c 5,4,3
-command[check_mem]=/usr/lib/nagios/plugins/check_memory.py -w 95 -c 99
-command[check_disk]=/usr/lib/nagios/plugins/check_disk -w 4% -c 3% -m -A -I /dev/shm -I /storage -I /sys -I /run -I '^/var/lib/docker/+'
-command[check_smtp]=/usr/lib/nagios/plugins/check_smtp -H localhost
-command[check_mailq]=/usr/lib/nagios/plugins/check_mailq -w350 -c400
-command[check_bonding]=/usr/lib/nagios/plugins/check_linux_bonding --slave-down=critical
-command[check_ntpd]=/usr/lib/nagios/plugins/check_ntpd.pl
-command[check_ntp]=/usr/lib/nagios/plugins/check_chrony
-
-command[check_mysql_backup]=/usr/lib/nagios/plugins/check_mysql_backup
-command[check_exim_ratelimit]=/usr/lib/nagios/plugins/check_exim_ratelimit
-command[check_opendkim]=/usr/lib/nagios/plugins/check_opendkim
-
 #command[check_disk1]=/usr/lib/nagios/plugins/check_disk -w 20 -c 10 -p /dev/hda1
 #command[check_disk2]=/usr/lib/nagios/plugins/check_disk -w 20 -c 10 -p /dev/hdb1
 #command[check_zombie_procs]=/usr/lib/nagios/plugins/check_procs -w 5 -c 10 -s Z
 #command[check_total_procs]=/usr/lib/nagios/plugins/check_procs -w 150 -c 200 
+
+command[check_NTP]=/usr/lib/nagios/plugins/check_ntp_peer -H localhost
+#command[check_disks]=/usr/lib/nagios/plugins/check_disk -e -w 20% -c 10% -A -i '^/mnt($$|/)|^/run/credentials/systemd-journald.service' -X tracefs
+command[check_disks]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% -m -A -I /dev/shm -I /storage -I /sys -I /run -I '^/var/lib/docker/+'
+command[check_firewall_syslog]=/usr/lib/nagios/plugins/check_file_age -w 300 -c 900 -f /var/log/kern.log
+command[check_load]=/usr/lib/nagios/plugins/check_load -w 15,10,8 -c 20,16,12
+command[check_mail_queue]=/usr/lib/nagios/plugins/check_mailq -M exim -w 1 -c 10
+command[check_processes]=/usr/lib/nagios/plugins/check_procs -w 250 -c 300
+command[check_swap]=/usr/lib/nagios/plugins/check_swap -w 30% -c 20%
+command[check_updates]=/usr/lib/nagios/plugins/check_apt -t 45
+command[check_users]=/usr/lib/nagios/plugins/check_users -w 5 -c 10
+command[check_zombies]=/usr/lib/nagios/plugins/check_procs -w 5 -c 10 -s Z
+command[check_mem]=/usr/lib/nagios/plugins/check_memory.py -w 90 -c 95
 
 
 
