--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
 name: "Nagios NRPE server"
-url: 'https://github.com/miloszarsky/hassio-addon-nrpe'
-maintainer: "Milos Zarsky <milos.zarsky@gmail.com>"
+url: 'https://github.com/DemoEffect/hassio-addon-nrpe'
+maintainer: "DemoEffect <ytdemoeffect@gmail.com>"
